2011-04-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend_sfcb.c:
	Fixed [ 3179149 ] mofc sigsegv at backend_sfcb:468 w/o correct property name

2010-07-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend_sfcb.c:
	[ 3019898 ] Remove cmpi headers

2009-12-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend_sfcb.c, mofparse.c, symtab.c:
	[ 1664637 ] Reduced size class repository / classProviderSf

2009-01-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend_print.c, backend_sfcb.c, mofc.y, mofdecl.h,
	  mofparse.c, mofs.l, symtab.c, symtab.h:
	Fixed [ 2441640 ] mofc needs to import instances for migration
	(fix by Norm Paxton)

2008-11-07  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mofparse.c mofs.l:
	Fixed [ 2168840 ] Fix various compiler warnings.
	(patch from J. Bart Whitely)

2008-10-30  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac
	Fixed [ 2192030 ] adapt to autoconf 2.63, automake 1.10
	(patch from Klaus Kämpf)

2008-10-07  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac, autoconfiscate.sh
	Fixed  2086429 RPATH missing from sfcbmof[pp]

2008-04-16  Sean Swehla

	* configure.ac:
	Fixed problem related to 1828500: CMPI 2.0 Support.

2007-08-28  Sven Schuetz

	* backend_sfcb.c:
	Fixed 1685254: sfcb does not return REFERENCECLASS in GetClass

2007-08-01  Sven Schuetz

        * backend_sfcb.c:
        Fixed 1763178: GetClass operation failure

2007-06-22  Tyrel Datwyler <tyreld@us.ibm.com>

	* mofs.l:
	Fixed 1741211 cleanup compiler warnings

2007-05-03  Chris Abbey

	* configure.ac:
	Fixed 1709042: added dependency to sfcUtil

2007-03-23  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* configure.ac:
	Addition for 1686170: instance comparison not supported.
	Needed to adjust the include path for the sfcb backend case.

2007-03-20  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* hash.h:
	Fixed 1683860: Error compiling CIM v2.14Experimental