@@ -7,6 +7,7 @@ Enhancements:
 - 1664637 Reduced size class repository / classProviderSf
 - 3019898 Remove cmpi headers
 - 3179149 mofc sigsegv at backend_sfcb:468 w/o correct property name
+- 3555421 mofc chokes on static instances when using -t option
 
 Changes in 0.8.4
 ================
